--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "devDependencies": {},
   "engines": {
-    "node": "12.19.0",
-    "npm": "6.14.8"
+    "node": "12.x",
+    "npm": "6.x"
   }
 }
